Update default font color, and fix label not showing on polyplanner

--- a/source/stylesheets/navbar.css.scss
+++ b/source/stylesheets/navbar.css.scss
@@ -7,7 +7,7 @@ $navbarWidth: 488px;
       #navWrapper {
         a:nth-child(2) {
           background-color: #FF6D6D !important;
-          color: white;
+          color: white; 
           font-weight: 600;
         }
       }
@@ -39,7 +39,7 @@ $navbarWidth: 488px;
         h1 {
           font-size: 37px;
           font-weight: 500;
-          color: #6B6B6B;
+          color: #5a5a5a;
           margin: 14px 0 19px 7px;
         }
         h2 {
