--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -17,6 +17,7 @@
 
 
 * {
+  color: #111820;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
